--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -15,7 +15,7 @@ body {
   padding: 0.01vmax;
   padding-top: 0.04vmax;
   overflow: hidden;
-  border: 1px solid #fff;
+  background-color: #800000;
 }
 
 .menubtn .ham {
