--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -45,7 +45,7 @@
 <div
   class="navbox absolute top-0 left-0 h-[5vmax] w-full bg-[#fff] flex items-center justify-between px-[5vmax] text-[#fff] z-10 max-sm:px-[2.5vmax] max-sm:h-0 max-sm:py-[4vmax] overflow-hidden"
 >
-  <img src="/images/logo.jpg" alt="" class="h-[140%] object-cover" />
+  <img src="/images/logo.jpg" alt="" class="h-[7vmax] object-cover" />
   <div
     class="linkbox absolute top-[50%] left-[50%] translate-x-[-50%] translate-y-[-50%] flex gap-[2.5vmax] max-sm:hidden"
   >
