--- a/views/about.ejs
+++ b/views/about.ejs
@@ -67,11 +67,11 @@
       area through our online website, now we have a lot of registered members
       who are looking for life partner through us.
     </p>
-    <h1
-      class="text-[3vmax] text-[#fff] font-semibold mt-[1.3vmax] max-sm:text-[3vmax] max-sm:mt-[1vmax] max-sm:mb-[-.9vmax]"
+    <h3
+      class="text-[1.8vmax] text-[#fff] font-semibold mt-[1.3vmax] max-sm:text-[3vmax] max-sm:mt-[1vmax] max-sm:mb-[-.9vmax]"
     >
       Our mission :-
-    </h1>
+    </h3>
     <p
       class="text-white leading-[2.3vmax] text-[1.3vmax] max-sm:leading-[3vmax] max-sm:text-[2vmax]"
     >
@@ -105,7 +105,7 @@
     class="hindiContent hidden flex-col gap-[1.3vmax] mt-[4vmax] max-sm:mt-[4vmax] max-sm:gap-[2.3vmax]"
   >
     <p
-      class="text-white leading-[2.5vmax] text-[1.3vmax] max-sm:leading-[3.5vmax] max-sm:text-[2vmax]"
+      class="text-white leading-[2.5vmax] text-[1.2vmax] max-sm:leading-[3.5vmax] max-sm:text-[2vmax]"
     >
       हम विशेष रूप से मध्य प्रदेश के शहरी व ग्रामीण क्षेत्र और पूरे भारत के
       उपयोगकर्ताओं को जमीनी स्तर नेटवर्क और ऑनलाइन मैचमेकिंग सेवाओं के अग्रणी
@@ -113,7 +113,7 @@
       के लिए साथी चुनने के महत्व को समझते हैं।
     </p>
     <p
-      class="text-white leading-[2.5vmax] text-[1.3vmax] max-sm:leading-[3.5vmax] max-sm:text-[2vmax]"
+      class="text-white leading-[2.5vmax] text-[1.2vmax] max-sm:leading-[3.5vmax] max-sm:text-[2vmax]"
     >
       मध्य प्रदेश के ग्रामीण क्षेत्र में एक दशक तक काम करने के बाद हमें एहसास
       हुआ कि बहुत सारे लड़के और लड़कियाँ बहुत अच्छे विवाह प्रोफ़ाइल के साथ अपने
@@ -126,19 +126,19 @@
       हैं।
     </p>
     <h3
-      class="text-[1.8vmax] text-[#800000] font-semibold mt-[1.3vmax] max-sm:text-[2.8vmax] max-sm:mb-[-.8vmax]"
+      class="text-[1.8vmax] text-[#fff] font-semibold mt-[1.3vmax] max-sm:text-[2.8vmax] max-sm:mb-[-.8vmax]"
     >
       हमारा मिशन :-
     </h3>
     <p
-      class="text-white leading-[2.5vmax] text-[1.3vmax] max-sm:leading-[3.5vmax] max-sm:text-[2vmax]"
+      class="text-white leading-[2.5vmax] text-[1.2vmax] max-sm:leading-[3.5vmax] max-sm:text-[2vmax]"
     >
-      हमारा मिशन मध्य प्रदेश लोगों के लिए विशेष सेवा प्रदान करना है,लोगों को एक
-      ऐसी सेवा प्रदान कराना जो सभी के लिए पसन्द का जीवन-साथी ढूंढने के लिए
+      हमारा मिशन मध्य प्रदेश के लोगों के लिए विशेष सेवा प्रदान करना है,लोगों को
+      एक ऐसी सेवा प्रदान कराना जो सभी के लिए पसन्द का जीवन-साथी ढूंढने के लिए
       सुरक्षित और आसान हो।
     </p>
     <p
-      class="text-white leading-[2.5vmax] text-[1.3vmax] max-sm:leading-[3.5vmax] max-sm:text-[2vmax]"
+      class="text-white leading-[2.5vmax] text-[1.2vmax] max-sm:leading-[3.5vmax] max-sm:text-[2vmax]"
     >
       सभी आयु वर्ग सभी धर्म जाती,अविवाहित्त, तलाकशुदा, विधवा, विधुर उच्च वर्ग,
       मध्यम वर्ग, निम्न आय वर्ग उच्च शिक्षित या नाममात्र शिक्षित बिजनेस क्लास,
@@ -146,7 +146,7 @@
       आसान प्रणाली ।
     </p>
     <p
-      class="text-white leading-[2.5vmax] text-[1.3vmax] max-sm:leading-[3.5vmax] max-sm:text-[2vmax]"
+      class="text-white leading-[2.5vmax] text-[1.2vmax] max-sm:leading-[3.5vmax] max-sm:text-[2vmax]"
     >
       हम जानते हैं कि आपका समय कीमती है, इसीलिए हमने एक प्रणाली बनाई है जहां आप
       चुन सकते हैं कि कौन आपसे संपर्क करने के योग्य है। यह आपको असंगत
