--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -87,6 +87,14 @@ body {
   background-color: #fff;
 }
 
+.slideHolder::-webkit-scrollbar {
+  display: none;
+}
+
+.slideHolder .imgbox {
+  transition: 0.25s linear;
+}
+
 @media (max-width: 30cm) {
   .menubtn {
     height: 4.2vmax;
