--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,87 @@
 <%- include('./partials/header')%>
 <!--  -->
-<div class="wrapper min-h-screen w-full"></div>
+<div class="wrapper min-h-screen w-full bg-[#800000] overflow-x-hidden">
+  <div
+    class="slideHolder relative h-[85vh] w-[100%] bg-[#800000] max-sm:h-[40vh]"
+  >
+    <div class="imgbox1 absolute top-0 left-0 z-[3] h-full w-full">
+      <img
+        src="/images/phere.jpeg"
+        alt=""
+        class="h-full w-full object-cover object-center"
+      />
+    </div>
+    <div class="imgbox2 absolute top-0 left-[100%] z-[2] h-full w-full">
+      <img
+        src="/images/rasam1.jpeg"
+        alt=""
+        class="h-full w-full object-cover object-center"
+      />
+    </div>
+    <div class="imgbox3 absolute top-0 left-[100%] z-[1] h-full w-full">
+      <img
+        src="/images/rasam2.jpeg"
+        alt=""
+        class="h-full w-full object-cover object-center"
+      />
+    </div>
+  </div>
+</div>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.0/gsap.min.js"></script>
+<script>
+  // Create the timeline for the slide animation
+  const tl = gsap.timeline({ repeat: -1 });
+
+  tl.to(".imgbox1", {
+    delay: 2,
+    duration: 1,
+    left: "-100%",
+    ease: "power2.inOut",
+    onComplete: () => {
+      document.querySelector(".imgbox1").style.left = "100%";
+    },
+  })
+    .to(".imgbox2", { duration: 1, left: "0%", ease: "power2.inOut" }, "-=1")
+    .to(
+      ".imgbox2",
+      {
+        delay: 2,
+        duration: 1,
+        left: "-100%",
+        ease: "power2.inOut",
+      },
+      "-=1"
+    )
+    .to(".imgbox3", { duration: 1, left: "0%", ease: "power2.inOut" }, "-=1")
+    .to(
+      ".imgbox3",
+      {
+        delay: 2,
+        duration: 1,
+        left: "-100%",
+        ease: "power2.inOut",
+      },
+      "-=1"
+    )
+    .to(
+      ".imgbox1",
+      {
+        duration: 1,
+        left: "0%",
+        ease: "power2.inOut",
+      },
+      "-=1"
+    );
+
+  // .to(".imgbox1", { duration: 0, left: "100%", ease: "none" }) // Reset imgbox1 for the next loop
+  // .to(".imgbox2", { duration: 1, left: "-100%", ease: "power2.inOut" })
+  // .to(".imgbox3", { duration: 1, left: "0%", ease: "power2.inOut" }, "-=0.5")
+  // .to(".imgbox1", { duration: 1, left: "0%", ease: "power2.inOut" }, "-=0.5")
+  // .to(".imgbox2", { duration: 0, left: "100%", ease: "none" }) // Reset imgbox2 for the next loop
+  // .to(".imgbox3", { duration: 1, left: "-100%", ease: "power2.inOut" })
+  // .to(".imgbox1", { duration: 1, left: "0%", ease: "power2.inOut" }, "-=0.5")
+  // .to(".imgbox2", { duration: 1, left: "0%", ease: "power2.inOut" }, "-=0.5")
+  // .to(".imgbox3", { duration: 0, left: "100%", ease: "none" }); // Reset imgbox3 for the next loop
+</script>
 <!--  -->
 <%- include('./partials/footer')%>
