--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,5 +1,5 @@
 <%- include('./partials/header')%>
 <!--  -->
-<h1>Welcome to profile</h1>
+<div class="wrapper min-h-screen w-full"></div>
 <!--  -->
 <%- include('./partials/footer')%>
