--- a/public/stylesheets/output.css
+++ b/public/stylesheets/output.css
@@ -566,6 +566,10 @@ video {
   left: 0px;
 }
 
+.left-\[100\%\] {
+  left: 100%;
+}
+
 .left-\[1vmax\] {
   left: 1vmax;
 }
@@ -594,12 +598,8 @@ video {
   top: 8vmax;
 }
 
-.left-\[100\%\] {
-  left: 100%;
-}
-
-.left-\[200\%\] {
-  left: 200%;
+.left-\[-\.5vmax\] {
+  left: -.5vmax;
 }
 
 .z-10 {
@@ -614,16 +614,12 @@ video {
   z-index: 1;
 }
 
-.z-\[3\] {
-  z-index: 3;
-}
-
-.z-\[52\] {
-  z-index: 52;
-}
-
 .z-\[2\] {
   z-index: 2;
+}
+
+.z-\[3\] {
+  z-index: 3;
 }
 
 .mr-2 {
@@ -674,6 +670,22 @@ video {
   margin-top: 4vmax;
 }
 
+.ml-\[\] {
+  margin-left: ;
+}
+
+.ml-\[-\.5vmax\] {
+  margin-left: -.5vmax;
+}
+
+.ml-\[-\.3vmax\] {
+  margin-left: -.3vmax;
+}
+
+.ml-\[-\.2vmax\] {
+  margin-left: -.2vmax;
+}
+
 .block {
   display: block;
 }
@@ -708,6 +720,18 @@ video {
 
 .h-screen {
   height: 100vh;
+}
+
+.h-\[80vh\] {
+  height: 80vh;
+}
+
+.h-\[4vmax\] {
+  height: 4vmax;
+}
+
+.h-\[4\.5vmax\] {
+  height: 4.5vmax;
 }
 
 .min-h-screen {
@@ -820,6 +844,30 @@ video {
   border-width: 2px;
 }
 
+.border-\[2\.5px\] {
+  border-width: 2.5px;
+}
+
+.border-\[2px\] {
+  border-width: 2px;
+}
+
+.border-\[2\.1px\] {
+  border-width: 2.1px;
+}
+
+.border-\[2\.2px\] {
+  border-width: 2.2px;
+}
+
+.border-\[2\.3px\] {
+  border-width: 2.3px;
+}
+
+.border-\[2\.4px\] {
+  border-width: 2.4px;
+}
+
 .border-b-2 {
   border-bottom-width: 2px;
 }
@@ -849,6 +897,10 @@ video {
 .border-zinc-300 {
   --tw-border-opacity: 1;
   border-color: rgb(212 212 216 / var(--tw-border-opacity));
+}
+
+.border-\[2\] {
+  border-color: 2;
 }
 
 .bg-\[\#01175B\] {
@@ -884,6 +936,11 @@ video {
 .bg-yellow-200 {
   --tw-bg-opacity: 1;
   background-color: rgb(254 240 138 / var(--tw-bg-opacity));
+}
+
+.bg-yellow-100 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(254 249 195 / var(--tw-bg-opacity));
 }
 
 .object-cover {
@@ -1049,6 +1106,14 @@ video {
   font-weight: 600;
 }
 
+.font-medium {
+  font-weight: 500;
+}
+
+.font-normal {
+  font-weight: 400;
+}
+
 .leading-\[1\.4vmax\] {
   line-height: 1.4vmax;
 }
@@ -1110,6 +1175,10 @@ video {
 .text-zinc-500 {
   --tw-text-opacity: 1;
   color: rgb(113 113 122 / var(--tw-text-opacity));
+}
+
+.text-\[\#80000\] {
+  color: #80000;
 }
 
 .shadow-none {
@@ -1234,20 +1303,12 @@ video {
     height: 36vmax;
   }
 
-  .max-sm\:h-\[7vmax\] {
-    height: 7vmax;
-  }
-
-  .max-sm\:h-\[50vh\] {
-    height: 50vh;
-  }
-
-  .max-sm\:h-\[0vh\] {
-    height: 0vh;
-  }
-
   .max-sm\:h-\[40vh\] {
     height: 40vh;
+  }
+
+  .max-sm\:h-\[7vmax\] {
+    height: 7vmax;
   }
 
   .max-sm\:w-\[100\%\] {
