--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -44,36 +44,41 @@
 </div>
 <% }else{ %>
 <div
-  class="navbox absolute top-0 left-0 h-[5vmax] w-full bg-[#fff] flex items-center justify-between px-[5vmax] text-[#fff] z-10 max-sm:px-[2.5vmax] max-sm:h-0 max-sm:py-[4vmax] overflow-hidden"
+  class="navbox absolute top-0 left-0 h-[4.5vmax] w-full bg-[#fff] flex items-center justify-between px-[5vmax] text-[#fff] z-10 max-sm:px-[2.5vmax] max-sm:h-0 max-sm:py-[4vmax] overflow-hidden"
 >
   <img
     src="/images/logo.jpg"
     alt=""
-    class="h-[90%] object-cover max-sm:h-[7vmax]"
+    class="h-[90%] object-cover ml-[-.3vmax] max-sm:h-[7vmax]"
   />
   <div
     class="linkbox absolute top-[50%] left-[50%] translate-x-[-50%] translate-y-[-50%] flex gap-[2.5vmax] max-sm:hidden"
   >
-    <a href="/" class="text-[1vmax] text-[#000]">Home</a>
-    <a href="/about" class="text-[1vmax] text-[#000]">About Us</a>
-    <a href="/contact" class="text-[1vmax] text-[#000]">Contact</a>
-    <a href="/memberships" class="text-[1vmax] text-[#000]">Memberships</a>
-    <a href="/privacy-policy" class="text-[1vmax] text-[#000]"
+    <a href="/" class="text-[1vmax] font-medium text-[#800000]">Home</a>
+    <a href="/about" class="text-[1vmax] font-medium text-[#800000]"
+      >About Us</a
+    >
+    <a href="/contact" class="text-[1vmax] font-medium text-[#800000]"
+      >Contact</a
+    >
+    <a href="/memberships" class="text-[1vmax] font-medium text-[#800000]"
+      >Memberships</a
+    >
+    <a href="/privacy-policy" class="text-[1vmax] font-medium text-[#800000]"
       >Privacy policy</a
     >
-    <a href="/faq" class="text-[1vmax] text-[#000]">FAQ</a>
   </div>
   <div class="buttonbox flex gap-2 max-sm:hidden">
     <a href="/user/register"
       ><button
-        class="py-[.5vmax] w-[7vmax] border-2 border-[#800000] text-[#800000] rounded-lg text-[1vmax] hover:text-[#fff] hover:bg-[#800000] hover:font-medium max-sm:py-[.75vmax] max-sm:w-[11vmax] max-sm:text-[1.8vmax]"
+        class="py-[.5vmax] w-[7vmax] border-[2px] border-[#800000] text-[#800000] font-medium rounded-lg text-[1vmax] hover:text-[#fff] hover:bg-[#800000] max-sm:py-[.75vmax] max-sm:w-[11vmax] max-sm:text-[1.8vmax]"
       >
         Register
       </button></a
     >
     <a href="/user/login"
       ><button
-        class="py-[.5vmax] w-[7vmax] border-2 border-[#800000] text-[#800000] rounded-lg text-[1vmax] hover:text-[#fff] hover:bg-[#800000] hover:font-medium max-sm:py-[.75vmax] max-sm:w-[11vmax] max-sm:text-[1.8vmax]"
+        class="py-[.5vmax] w-[7vmax] border-[2px] border-[#800000] text-[#800000] font-medium rounded-lg text-[1vmax] hover:text-[#fff] hover:bg-[#800000] max-sm:py-[.75vmax] max-sm:w-[11vmax] max-sm:text-[1.8vmax]"
       >
         Login
       </button></a
