some changes in code

--- a/views/membership.ejs
+++ b/views/membership.ejs
@@ -12,7 +12,7 @@
     class="packagesHolder w-full flex gap-[2.5vmax] py-[5vmax] max-sm:flex-col max-sm:gap-[5vmax]"
   >
     <div
-      class="package1 w-1/3 rounded-xl overflow-hidden flex flex-col items-center max-sm:w-full bg-yellow-100"
+      class="package1 w-1/3 rounded-xl overflow-hidden flex flex-col items-center max-sm:w-full bg-red-100"
     >
       <h4
         class="text-[2vmax] font-semibold text-white tracking-tight w-full h-[5vmax] flex items-center justify-center bg-[#800000] max-sm:text-[3vmax] max-sm:h-[7vmax]"
@@ -83,7 +83,7 @@
       </button>
     </div>
     <div
-      class="package2 w-1/3 rounded-xl overflow-hidden flex flex-col items-center max-sm:w-full bg-yellow-100"
+      class="package2 w-1/3 rounded-xl overflow-hidden flex flex-col items-center max-sm:w-full bg-red-100"
     >
       <h4
         class="text-[2vmax] font-semibold text-white tracking-tight w-full h-[5vmax] flex items-center justify-center bg-[#800000] max-sm:text-[3vmax] max-sm:h-[7vmax]"
@@ -160,7 +160,7 @@
       </button>
     </div>
     <div
-      class="package3 w-1/3 rounded-xl overflow-hidden flex flex-col items-center max-sm:w-full bg-yellow-100"
+      class="package3 w-1/3 rounded-xl overflow-hidden flex flex-col items-center max-sm:w-full bg-red-100"
     >
       <h4
         class="text-[2vmax] font-semibold text-white tracking-tight w-full h-[5vmax] flex items-center justify-center bg-[#800000] max-sm:text-[3vmax] max-sm:h-[7vmax]"
@@ -241,7 +241,7 @@
     class="packagesHolder w-full flex gap-[2.5vmax] max-sm:flex-col max-sm:gap-[5vmax]"
   >
     <div
-      class="package4 w-1/3 rounded-xl overflow-hidden flex flex-col items-center max-sm:w-full bg-yellow-100"
+      class="package4 w-1/3 rounded-xl overflow-hidden flex flex-col items-center max-sm:w-full bg-red-100"
     >
       <h4
         class="text-[2vmax] font-semibold text-white tracking-tight w-full h-[5vmax] flex items-center justify-center bg-[#800000] max-sm:text-[3vmax] max-sm:h-[7vmax]"
@@ -318,7 +318,7 @@
       </button>
     </div>
     <div
-      class="package5 w-1/3 rounded-xl overflow-hidden flex flex-col items-center max-sm:w-full bg-yellow-100"
+      class="package5 w-1/3 rounded-xl overflow-hidden flex flex-col items-center max-sm:w-full bg-red-100"
     >
       <h4
         class="text-[2vmax] font-semibold text-white tracking-tight w-full h-[5vmax] flex items-center justify-center bg-[#800000] max-sm:text-[3vmax] max-sm:h-[7vmax]"
