--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -4,7 +4,7 @@
   <img
     src="/images/logo.jpg"
     alt=""
-    class="h-[90%] object-cover ml-[-.3vmax] max-sm:h-[7vmax]"
+    class="h-[90%] object-cover ml-[-.3vmax] max-sm:h-[7vmax] max-sm:ml-[-.4vmax]"
   />
   <div
     class="linkbox absolute top-[50%] left-[50%] translate-x-[-50%] translate-y-[-50%] flex gap-[2.5vmax] max-sm:hidden"
