some changes in code

--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -23,11 +23,13 @@
       >Privacy policy</a
     >
   </div>
-  <div class="buttonbox flex items-center gap-3 max-sm:hidden">
-    <h5 class="text-[1vmax] font-medium text-[#800000]">Already a member?</h5>
+  <div class="buttonbox flex items-center gap-3">
+    <h5 class="text-[1vmax] font-medium text-[#800000] max-sm:hidden">
+      Already a member?
+    </h5>
     <a href="/user/login"
       ><button
-        class="py-[.5vmax] w-[7vmax] border-[2px] border-[#800000] text-[#800000] font-medium rounded-lg text-[1vmax] hover:text-[#fff] hover:bg-[#800000] max-sm:py-[.75vmax] max-sm:w-[11vmax] max-sm:text-[1.8vmax]"
+        class="py-[.5vmax] w-[7vmax] border-[2px] border-[#800000] text-[#800000] font-medium rounded-lg text-[1vmax] hover:text-[#fff] hover:bg-[#800000] max-sm:absolute max-sm:top-[50%] max-sm:right-[7.8vmax] max-sm:translate-y-[-50%] max-sm:p-[0vmax] max-sm:h-[4.2vmax] max-sm:w-[11vmax] max-sm:text-[1.8vmax] max-sm:bg-[#800000] max-sm:text-white"
       >
         LOG IN
       </button></a
