--- a/public/stylesheets/output.css
+++ b/public/stylesheets/output.css
@@ -598,8 +598,32 @@ video {
   top: 8vmax;
 }
 
-.left-\[-\.5vmax\] {
-  left: -.5vmax;
+.right-\[\] {
+  right: ;
+}
+
+.right-\[4vmax\] {
+  right: 4vmax;
+}
+
+.top-\[50\] {
+  top: 50;
+}
+
+.right-\[6vmax\] {
+  right: 6vmax;
+}
+
+.right-\[8vmax\] {
+  right: 8vmax;
+}
+
+.right-\[7vmax\] {
+  right: 7vmax;
+}
+
+.right-\[7\.5vmax\] {
+  right: 7.5vmax;
 }
 
 .z-10 {
@@ -620,6 +644,10 @@ video {
 
 .z-\[3\] {
   z-index: 3;
+}
+
+.ml-\[-\.3vmax\] {
+  margin-left: -.3vmax;
 }
 
 .mr-2 {
@@ -670,22 +698,6 @@ video {
   margin-top: 4vmax;
 }
 
-.ml-\[\] {
-  margin-left: ;
-}
-
-.ml-\[-\.5vmax\] {
-  margin-left: -.5vmax;
-}
-
-.ml-\[-\.3vmax\] {
-  margin-left: -.3vmax;
-}
-
-.ml-\[-\.2vmax\] {
-  margin-left: -.2vmax;
-}
-
 .block {
   display: block;
 }
@@ -706,8 +718,8 @@ video {
   height: 5vmax;
 }
 
-.h-\[85vh\] {
-  height: 85vh;
+.h-\[80vh\] {
+  height: 80vh;
 }
 
 .h-\[90\%\] {
@@ -722,16 +734,20 @@ video {
   height: 100vh;
 }
 
-.h-\[80vh\] {
-  height: 80vh;
+.h-\[\] {
+  height: ;
+}
+
+.h-\[3vmax\] {
+  height: 3vmax;
 }
 
 .h-\[4vmax\] {
   height: 4vmax;
 }
 
-.h-\[4\.5vmax\] {
-  height: 4.5vmax;
+.h-\[3\.5vmax\] {
+  height: 3.5vmax;
 }
 
 .min-h-screen {
@@ -770,6 +786,14 @@ video {
   width: 100%;
 }
 
+.w-\[50\%\] {
+  width: 50%;
+}
+
+.w-\[45\%\] {
+  width: 45%;
+}
+
 .translate-x-\[-50\%\] {
   --tw-translate-x: -50%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -800,8 +824,8 @@ video {
   justify-content: space-between;
 }
 
-.gap-2 {
-  gap: 0.5rem;
+.gap-3 {
+  gap: 0.75rem;
 }
 
 .gap-\[\.4vmax\] {
@@ -818,10 +842,6 @@ video {
 
 .gap-\[2\.5vmax\] {
   gap: 2.5vmax;
-}
-
-.gap-3 {
-  gap: 0.75rem;
 }
 
 .overflow-hidden {
@@ -844,32 +864,28 @@ video {
   border-radius: 0.75rem;
 }
 
-.border-2 {
-  border-width: 2px;
+.rounded {
+  border-radius: 0.25rem;
 }
 
-.border-\[2\.5px\] {
-  border-width: 2.5px;
+.border-2 {
+  border-width: 2px;
 }
 
 .border-\[2px\] {
   border-width: 2px;
 }
 
-.border-\[2\.1px\] {
-  border-width: 2.1px;
+.border {
+  border-width: 1px;
 }
 
-.border-\[2\.2px\] {
-  border-width: 2.2px;
+.border-\[2vmax\] {
+  border-width: 2vmax;
 }
 
-.border-\[2\.3px\] {
-  border-width: 2.3px;
-}
-
-.border-\[2\.4px\] {
-  border-width: 2.4px;
+.border-\[5vmax\] {
+  border-width: 5vmax;
 }
 
 .border-b-2 {
@@ -882,6 +898,10 @@ video {
 
 .border-t-2 {
   border-top-width: 2px;
+}
+
+.border-solid {
+  border-style: solid;
 }
 
 .border-none {
@@ -903,8 +923,8 @@ video {
   border-color: rgb(212 212 216 / var(--tw-border-opacity));
 }
 
-.border-\[2\] {
-  border-color: 2;
+.border-\[\] {
+  border-color: ;
 }
 
 .bg-\[\#01175B\] {
@@ -932,24 +952,22 @@ video {
   background-color: rgb(37 99 235 / var(--tw-bg-opacity));
 }
 
+.bg-red-100 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(254 226 226 / var(--tw-bg-opacity));
+}
+
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.bg-yellow-200 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(254 240 138 / var(--tw-bg-opacity));
+.bg-\[\] {
+  background-color: ;
 }
 
-.bg-yellow-100 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(254 249 195 / var(--tw-bg-opacity));
-}
-
-.bg-red-100 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(254 226 226 / var(--tw-bg-opacity));
+.bg-\[\#\] {
+  background-color: #;
 }
 
 .object-cover {
@@ -976,6 +994,14 @@ video {
 
 .p-\[4vmax\] {
   padding: 4vmax;
+}
+
+.p-\[\.5vmax\] {
+  padding: .5vmax;
+}
+
+.p-\[\] {
+  padding: ;
 }
 
 .px-\[\.5vmax\] {
@@ -1067,6 +1093,10 @@ video {
   padding-top: 8vmax;
 }
 
+.pt-0 {
+  padding-top: 0px;
+}
+
 .text-left {
   text-align: left;
 }
@@ -1107,28 +1137,16 @@ video {
   font-size: 3vmax;
 }
 
-.text-\[\.8vmax\] {
-  font-size: .8vmax;
-}
-
-.text-\[\.9vmax\] {
-  font-size: .9vmax;
-}
-
 .font-bold {
   font-weight: 700;
-}
-
-.font-semibold {
-  font-weight: 600;
 }
 
 .font-medium {
   font-weight: 500;
 }
 
-.font-normal {
-  font-weight: 400;
+.font-semibold {
+  font-weight: 600;
 }
 
 .leading-\[1\.4vmax\] {
@@ -1153,11 +1171,6 @@ video {
 
 .tracking-tight {
   letter-spacing: -0.025em;
-}
-
-.text-\[\#000\] {
-  --tw-text-opacity: 1;
-  color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
 .text-\[\#01175B\] {
@@ -1192,10 +1205,6 @@ video {
 .text-zinc-500 {
   --tw-text-opacity: 1;
   color: rgb(113 113 122 / var(--tw-text-opacity));
-}
-
-.text-\[\#80000\] {
-  color: #80000;
 }
 
 .shadow-none {
@@ -1241,10 +1250,6 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.hover\:font-medium:hover {
-  font-weight: 500;
-}
-
 .hover\:text-\[\#fff\]:hover {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
@@ -1256,6 +1261,10 @@ video {
 }
 
 @media not all and (min-width: 640px) {
+  .max-sm\:absolute {
+    position: absolute;
+  }
+
   .max-sm\:left-\[1\.5vmax\] {
     left: 1.5vmax;
   }
@@ -1264,12 +1273,36 @@ video {
     top: 1.5vmax;
   }
 
+  .max-sm\:top-\[50\%\] {
+    top: 50%;
+  }
+
+  .max-sm\:right-\[7\.5vmax\] {
+    right: 7.5vmax;
+  }
+
+  .max-sm\:right-\[8vmax\] {
+    right: 8vmax;
+  }
+
+  .max-sm\:right-\[7\.7vmax\] {
+    right: 7.7vmax;
+  }
+
+  .max-sm\:right-\[7\.8vmax\] {
+    right: 7.8vmax;
+  }
+
   .max-sm\:mb-\[-\.8vmax\] {
     margin-bottom: -.8vmax;
   }
 
   .max-sm\:mb-\[-\.9vmax\] {
     margin-bottom: -.9vmax;
+  }
+
+  .max-sm\:ml-\[-\.4vmax\] {
+    margin-left: -.4vmax;
   }
 
   .max-sm\:mr-\[\.5vmax\] {
@@ -1304,10 +1337,6 @@ video {
     margin-top: 4vmax;
   }
 
-  .max-sm\:ml-\[-\.4vmax\] {
-    margin-left: -.4vmax;
-  }
-
   .max-sm\:flex {
     display: flex;
   }
@@ -1332,6 +1361,14 @@ video {
     height: 7vmax;
   }
 
+  .max-sm\:h-\[2\.6vmax\] {
+    height: 2.6vmax;
+  }
+
+  .max-sm\:h-\[4\.2vmax\] {
+    height: 4.2vmax;
+  }
+
   .max-sm\:w-\[100\%\] {
     width: 100%;
   }
@@ -1342,6 +1379,11 @@ video {
 
   .max-sm\:w-full {
     width: 100%;
+  }
+
+  .max-sm\:translate-y-\[-50\%\] {
+    --tw-translate-y: -50%;
+    transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
   }
 
   .max-sm\:flex-col {
@@ -1376,6 +1418,15 @@ video {
     overflow-x: hidden;
   }
 
+  .max-sm\:bg-\[\] {
+    background-color: ;
+  }
+
+  .max-sm\:bg-\[\#800000\] {
+    --tw-bg-opacity: 1;
+    background-color: rgb(128 0 0 / var(--tw-bg-opacity));
+  }
+
   .max-sm\:p-\[1\.5vmax\] {
     padding: 1.5vmax;
   }
@@ -1386,6 +1437,14 @@ video {
 
   .max-sm\:p-\[2\.5vmax\] {
     padding: 2.5vmax;
+  }
+
+  .max-sm\:p-\[0\] {
+    padding: 0;
+  }
+
+  .max-sm\:p-\[0vmax\] {
+    padding: 0vmax;
   }
 
   .max-sm\:px-\[\.8vmax\] {
@@ -1431,6 +1490,11 @@ video {
   .max-sm\:py-\[4vmax\] {
     padding-top: 4vmax;
     padding-bottom: 4vmax;
+  }
+
+  .max-sm\:py-\[0\] {
+    padding-top: 0;
+    padding-bottom: 0;
   }
 
   .max-sm\:pb-\[1\.5vmax\] {
@@ -1507,5 +1571,10 @@ video {
 
   .max-sm\:leading-\[3vmax\] {
     line-height: 3vmax;
+  }
+
+  .max-sm\:text-white {
+    --tw-text-opacity: 1;
+    color: rgb(255 255 255 / var(--tw-text-opacity));
   }
 }
