--- a/views/userLogin.ejs
+++ b/views/userLogin.ejs
@@ -16,12 +16,14 @@
         type="text"
         name="username"
         placeholder="Username"
+        required
         class="usernameInput block p-[.8vmax] w-[25vmax] outline-none mt-[1.5vmax] rounded-md placeholder:text-zinc-500 max-sm:w-full max-sm:py-[1.5vmax] max-sm:px-[1.3vmax] max-sm:mt-[2vmax] max-sm:text-[2vmax]"
       />
       <input
         type="password"
         name="password"
         placeholder="Password"
+        required
         class="passwordInput block p-[.8vmax] w-[25vmax] outline-none mt-[1vmax] rounded-md placeholder:text-zinc-500 max-sm:w-full max-sm:py-[1.5vmax] max-sm:px-[1.3vmax] max-sm:mt-[1.5vmax] max-sm:text-[2vmax]"
       />
       <button
