--- a/public/stylesheets/output.css
+++ b/public/stylesheets/output.css
@@ -970,6 +970,11 @@ video {
   background-color: #;
 }
 
+.bg-red-200 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(254 202 202 / var(--tw-bg-opacity));
+}
+
 .object-cover {
   -o-object-fit: cover;
      object-fit: cover;
