--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -102,6 +102,15 @@ body {
   background-repeat: no-repeat;
 }
 
+.addressBox {
+  height: 100%;
+  width: 100%;
+  background-image: url("https://i.pinimg.com/originals/8b/a9/fa/8ba9fa03c78449ae78db4e213103639f.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
 @media (max-width: 30cm) {
   .menubtn {
     height: 4.2vmax;
