--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -29,7 +29,7 @@
     </h5>
     <a href="/user/login"
       ><button
-        class="py-[.5vmax] w-[7vmax] border-[2px] border-[#800000] text-[#800000] font-medium rounded-lg text-[1vmax] hover:text-[#fff] hover:bg-[#800000] max-sm:absolute max-sm:top-[50%] max-sm:right-[7.8vmax] max-sm:translate-y-[-50%] max-sm:p-[0vmax] max-sm:h-[4.2vmax] max-sm:w-[11vmax] max-sm:text-[1.5vmax] max-sm:bg-[#800000] max-sm:text-white"
+        class="py-[.5vmax] w-[7vmax] border-[2px] border-[#800000] text-[#800000] font-medium rounded-md text-[1vmax] hover:text-[#fff] hover:bg-[#800000] max-sm:absolute max-sm:top-[50%] max-sm:right-[7.8vmax] max-sm:translate-y-[-50%] max-sm:p-[0vmax] max-sm:h-[4.2vmax] max-sm:w-[11vmax] max-sm:text-[1.6vmax] max-sm:bg-[#800000] max-sm:text-white"
       >
         LOG IN
       </button></a
