--- a/views/userRegister.ejs
+++ b/views/userRegister.ejs
@@ -356,6 +356,7 @@
           <option value="Private">Private</option>
           <option value="Business">Business</option>
           <option value="Defence">Defence</option>
+          <option value="Defence">Farmer</option>
           <option value="Not working">Not working</option>
         </select>
       </div>
